# fuse-img2heic-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.yaml  fuse-img2heic
src/: cache.rs  config.rs  file_detector.rs  filesystem.rs  image_converter.rs  main.rs  mount_management.rs  thread_pool.rs
